# leyla

./: CMakeLists.txt  README.md  reversi-cpp.files  reversi-cpp.includes  test.py
ai/: leyla.cpp  leyla.h
game/: board.cpp  board.h  gameplay.cpp  gameplay.h
ui/network/: main.cpp  reversiopponent.cpp  reversiopponent.h
ui/tui/: main.cpp
