project(reversi-cpp)
cmake_minimum_required(VERSION 2.8)
find_package(Curses REQUIRED)
aux_source_directory(ai SRC_LIST)
aux_source_directory(ui/tui SRC_LIST)
aux_source_directory(game SRC_LIST)
include_directories(.)
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries(${PROJECT_NAME}  ${CURSES_LIBRARIES})
target_compile_features(${PROJECT_NAME} PRIVATE cxx_range_for)
